--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "express": "^4.17.1",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
+    "pg": "^8.7.1",
+    "sequelize": "^6.7.0",
+    "sqlite3": "^5.0.2",
     "supertest": "^6.1.6"
   }
 }
